--- a/CarRentalProject/CarRental_Backend/Car_rental_backend/bin/pom.xml
+++ b/CarRentalProject/CarRental_Backend/Car_rental_backend/bin/pom.xml
@@ -10,10 +10,10 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>Project_soa</artifactId>
+	<artifactId>Car_rental_backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>Project_soa</name>
+	<name>Car_rental_backend</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
