--- a/CarRentalProject/CarRental_Fronted/package.json
+++ b/CarRentalProject/CarRental_Fronted/package.json
@@ -11,9 +11,11 @@
     "@quasar/extras": "^1.16.6",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.1",
+    "crypto-js": "^4.2.0",
     "jquery": "^3.7.1",
     "quasar": "^2.12.6",
     "vue": "^3.3.4",
+    "vue-cryptojs": "^2.4.5",
     "vue-router": "^4.2.5",
     "vuex": "^4.0.2"
   },
