--- a/CarRentalProject/CarRental_Backend/Car_rental_backend/bin/src/main/resources/application.properties
+++ b/CarRentalProject/CarRental_Backend/Car_rental_backend/bin/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+server.port=8081
 
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/car_rent
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+springdoc.api-docs.path=/api-docs
+
+springdoc.swagger-ui.path=/swagger-ui-custom.html
